# autonomous-intelligence

./: .env_sample  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CNAME  Gemfile  LICENSE  README.md  _config.yml  action_handler.py  ai_service.py  anthropic_cli.py  checkout-repo.sh  config.py  conversation_history.txt  direct_knowledge.md  event_handler.py  index.html  init_env.sh  projects.html  requirements.txt  speech_processing.py  start_all.sh  start_apps.service  start_apps.sh  tau.py  tau_speech.py
Mac/SAM3/: .gitignore  README.md  pyproject.toml
Mac/SAM3/results/: benchmark.macbookpro.m3.36GB.csv
Mac/SAM3/scripts/: download_coco.py  download_models.py  setup_efficientsam3.sh
Mac/SAM3/src/: accuracy.py  benchmark.py  device.py  efficientsam3_runner.py  metrics.py  sam21_runner.py  sam3_runner.py  ssl_setup.py
aws/neptune-graph/: .env.example  pyproject.toml
aws/neptune-graph/scripts/: kg
aws/neptune-graph/src/neptune_graph/: __init__.py  batch.py  cli.py  client.py  config.py  exceptions.py  models.py  operations.py  queries.py
data-refinery/: .env.sample  .gitignore  README.md  docker-compose.yml  generator.py  init_env.sh  pyproject.toml  refinery.py  test_vllm.py
data-refinery/docs/: architecture.md  generator.md  getting-started.md  mcp-server.md  refinery.md
data-refinery/docs/major-prompt-requests/: initial-request.md  revision-2-request.md
data-refinery/src/: __init__.py  cypher_generator.py  document_processor.py  embeddings.py  extractor.py  generator_app.py  json_writer.py  mcp_server.py  models.py  state.py
discord-bot/: .env.sample  bedrock_backend.py  bot.py  main.py  pyproject.toml
qq/: .env.sample  .gitignore  CLAUDE.md  README.md  debug_neo4j.py  mcp.json  pyproject.toml  qq  qq-memory  reproduce_graph_agent.py  test_gliner.py  test_gliner_debug.py
qq/.agent/skills/call-qq/: SKILL.md
qq/.agent/skills/implement/: SKILL.md
qq/.agent/skills/mongodb-query/: SKILL.md
qq/.agent/skills/neo4j-query/: SKILL.md
qq/.agent/skills/plan/: SKILL.md
qq/.agent/skills/test-on-finish/: SKILL.md
qq/.claude/skills-test/memory/: SKILL.md
qq/agents/default/: default.system.md
qq/agents/notes/: notes.py  notes.system.md
qq/docs/: agents.md  analyzer-agent.md  anchoring-answers-in-sources.md  architecture.md  genai.md  memory-as-skill.md  memory-flat.md  memory-graph.md  memory-notes-core.md  memory-notes-ephemeral.md  memory.md  remove-thinking.md  source-metadata.md  sub-agents.md  task-queue.md
qq/docs/investigations/: 2026-02-01_graph_agent_json_error.md  agentic-memory-read-files.md  neo4j-relationships-scarcity.md  overwhelming-context-on-listing-files.md  persistence-memory.md
qq/docs/plans/: README.md  agents-infra.md  analyzer-agent.md  docs-markdown-conversion.md  docx-pdf-to-markdown-support.md  files_suite.md  formatted-thinking.md  graph-plan.md  max-tokens-limit-recovery.md  memory-agent-tools.md  memory-anchoring-alignment.md  memory-backup.md  neo4j-relationship-enhancement.md  notes-organization.md  parallel-work.md  read_sliding_window.md  recursive-calling.md  source-metadata.md  strands-agent-openai-model.md  strands-finish.md  sub-agent-call-queue.md  token-overflow-management.md
qq/docs/prompts/: initial-prompt.md
qq/services/embeddings/: Dockerfile  main.py  requirements.txt
qq/skills/coding/: SKILL.md
qq/skills/memory/: config.sample.json
qq/skills/memory/assets/: docker-compose.yml
qq/skills/memory/references/: notes-working.md
qq/src/qq/: __init__.py  __main__.py  agents.py  app.py  cli.py  client.py  console.py  embeddings.py  errors.py  history.py  mcp_loader.py  mcp_server.py  memory_status.py  recovery.py  session.py  skills.py  test_systems.py
qq/tests/: test_child_process.py  test_task_queue.py
qwen3-tts/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.parakeet  docker-compose.yaml  main.py  pyproject.toml
qwen3-tts/scripts/: prepare_data.sh  record_voice.py  serve.sh  setup_ngc.sh  train.sh
qwen3-tts/src/: listen.py  listen_server.py  server.py  speak.py  speak_direct.py
qwen3-tts/stage_configs/: qwen3_tts.yaml
realtime-api/: .env.example  Dockerfile  docker-compose.yaml  pyproject.toml
realtime-api/docs/: aec.md  barge-in.md  docker.md  local-models.md  non-aec.md  realtime-protocol.md  session-state.md  streaming.md  vad-turn-detection.md
realtime-api/docs/components/: docker-compose.md  magpie-tts.md  parakeet-stt.md  realtime-api.md  vllm-llm.md
realtime-api/scripts/: deploy.sh  speak.py  speak.sh  test_concurrent_tts.py  test_tts.sh
realtime-api/src/realtime_api/: audio.py  barge_in.py  config.py  events.py  llm_client.py  main.py  protocol.py  session.py  stt_client.py  tts_client.py  vad.py  ws_handler.py
realtime-api/static/: index.html
realtime-api/tests/: test_tts_roundtrip.py
(+624 files in other folders)
