[project]
name = "qq"
version = "0.1.0"
description = "CLI/Console conversational app with vLLM, agents, MCP, and skills"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0",
    "rich>=13.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dev = ["pytest>=8.0"]

[project.scripts]
qq = "qq:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qq"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[dependency-groups]
dev = ["pytest>=8.0"]
