[project]
name = "qq"
version = "0.1.0"
description = "CLI/Console conversational app with vLLM, agents, MCP, and skills"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0",
    "rich>=13.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "pymongo>=4.0",
    "neo4j>=5.0",
    "gliner>=0.1.0",
    "strands-agents>=1.24.0",
    "markitdown[all]>=0.0.1",
    "fastmcp>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
qq = "qq:main"
qq-memory = "qq.memory_status:main"
qq-test = "qq.test_systems:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qq"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[dependency-groups]
dev = ["pytest>=8.0"]
