[project]
name = "qwen3-tts"
version = "0.2.0"
description = "TTS using Qwen3-TTS via vLLM-Omni"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "nemo-toolkit[asr]>=2.3.0",
    "numpy>=1.26.4",
    "qwen-tts>=0.1.1",
    "soundfile>=0.13.1",
]

[project.optional-dependencies]
training = [
    "qwen-tts",
    "transformers",
    "torch",
]
