[project]
name = "sam3-benchmark"
version = "0.1.0"
description = "Benchmarking SAM3 vs EfficientSAM3 on Apple Silicon"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.7.0",
    "torchvision",
    "torchaudio",
    "transformers>=4.47.0",
    "huggingface-hub",
    "Pillow",
    "numpy",
    "pandas",
    "psutil",
    "tqdm",
    "pycocotools>=2.0.7",
    "scipy>=1.10.0",
]
