[project]
name = "neptune-graph"
version = "0.1.0"
description = "Python library for managing entities and relationships in AWS Neptune Analytics"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.34",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "moto[neptune]>=5.0"]

[project.scripts]
kg = "neptune_graph.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/neptune_graph"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""
